kubernetes/apps/network/external-dns-unifi/templates/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: external-dns-unifi-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: external-dns-unifi
    egress:
      - toFQDNs:
          - matchName: unifi.home.arpa
        toPorts:
          - ports:
              - port: "443"
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: external-dns-unifi-egress-internal
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: external-dns-unifi
    egress:
      - toEntities:
          - kube-apiserver
      - toEndpoints:
          - {}
